--- a/index.html
+++ b/index.html
@@ -1,9 +1,69 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kalnia:wght@500&display=swap" rel="stylesheet">
+    <title>HTML Tables</title>
+</head>
 <body>
-  <h1>Tamkeen Javaid</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
+    <h1>HTML Table Reference</h1>
 
+    <h2>Table Tags</h2>
+
+    <table class="tags">
+            
+        <thead>
+            <tr>
+                <th>Tag</th> <th>Name</th> <th>Description</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td>&lt;table&gt;</td> <td>Table</td> <td>The wrapper element for all HTML tables</td>
+            </tr>
+            <tr>
+                <td>&lt;thead&gt;</td> <td>Table Head</td> <td>The set of rows defining the column headers in a table</td>
+            </tr>
+            <tr>
+                <td>&lt;tbody&gt;</td> <td>Table Body</td> <td>The set of rows containing the actual table data</td>
+            </tr>
+            <tr>
+                <td>&lt;tr&gt;</td> <td>Table Row</td> <td>The table row container</td>
+            </tr>
+            <tr>
+                <td>&lt;td&gt;</td> <td>Table Data</td> <td>The data inputted into the corresponding cell of the row container</td>
+            </tr>
+            <tr>
+                <td>&lt;tfoot&gt;</td> <td>Table Foot</td> <td>The set of rows defining the footer in a table</td>
+            </tr>
+        </tbody>
+
+    </table>
+
+    <h2>Table Attributes</h2>
+
+    <table class="attributes">
+        <thead>
+            <tr>
+                <th>Attribute</th> <th>Name</th> <th>Description</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>colspan</td> <td>Column Span</td> <td>Defines how many columns a td element should span</td>
+            </tr>
+            <tr>
+                <td>rowspan</td> <td>Row Span</td> <td>Defines how many rows a td element should span</td>
+            </tr>
+        </tbody>
+
+    </table>
+</body>
 </html>
